WIP added an override for nginx container when zeppelin is active- should avoid the situation where nginx breaks when zeppelin is NOT active

--- a/docker-compose-zeppelin.yml
+++ b/docker-compose-zeppelin.yml
@@ -46,6 +46,10 @@ services:
       retries: 5
     restart: unless-stopped
 
+  nginx:
+    volumes:
+          - ./zeppelin/nginx/zeppelin.inc:/etc/nginx/servers/zeppelin.inc
+    
 networks:
   esnet:
     driver: bridge
