--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -124,6 +124,7 @@ services:
           - ./nginx/servers:/etc/nginx/servers
           - ./nginx/locations:/etc/nginx/locations
           - ./nginx/root/robots.txt:/var/www/html/robots.txt
+          - ./nginx/root/files:/var/www/html/files
           - nginxlog:/var/log/nginx
     ports:
       - "80:80"
