--- a/docker-compose-geoserver.yml
+++ b/docker-compose-geoserver.yml
@@ -9,12 +9,12 @@ services:
       container_name: geoserver
       ports:
         - "8083:8080"
-      restart: on-failure
       environment:
       - INSTALL_EXTENSIONS=true
       - STABLE_EXTENSIONS=wps,csw
       - EXTRA_JAVA_OPTS=-Xms1G -Xmx2G
       - GEOSERVER_CSRF_WHITELIST=${GN_URL}
+      - GEOSERVER_CSRF_DISABLE=false
       volumes:
       - ./geoserver_data:/opt/geoserver_data/:Z
       - ./additional_libs:/opt/additional_libs:Z
