added GN_VERSION environment variable, currently set to 4.2.4. Abstracted datahub configuration out so it's easier to run without it, without breaking nginx

--- a/.env-local.sample
+++ b/.env-local.sample
@@ -1,5 +1,5 @@
 COMPOSE_FILE=docker-compose.yml:docker-compose-postgres.yml:docker-compose-elk.yml:docker-compose-monitoring.yml
-#:docker-compose-geohealthcheck.yml:docker-compose-zeppelin.yml
+#:docker-compose-geohealthcheck.yml:docker-compose-zeppelin.yml:docker-compose-datahub.yml
 
 # Geonetwork
 GN_HOST=geonetwork
@@ -9,6 +9,7 @@ GN_ADMIN_PASSWORD=
 GN_PROTOCOL=http
 GN_URL=
 GN_SITE_NAME=
+GN_VERSION=4.2.4
 
 
 # Datahub
