--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -132,7 +132,7 @@ services:
           - ./nginx/servers:/etc/nginx/servers
           - ./nginx/locations:/etc/nginx/locations
           # commented out until we're ready to go live
-          #- ./nginx/sites-available:/etc/nginx/sites-available
+          - ./nginx/sites-available:/etc/nginx/sites-available
           - ./nginx/root/robots.txt:/var/www/html/robots.txt
           - ./nginx/root/files:/var/www/html/files
           - nginxlog:/var/log/nginx
