--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,8 +51,9 @@ services:
       - ./astun/geonetwork/data/resources/images/logos:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/data/resources/images/harvesting
       - ./astun/geonetwork/data/resources/images/logos:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/data/resources/images/logos
       - ./astun/geonetwork/data/resources/images/logos/favicon.png:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/data/resources/images/logos/favicon.png
-      # sub-portals custom style
+      # sub-portals
       - ./astun/geonetwork/catalog/style/sub_portals:/var/lib/jetty/webapps/geonetwork/catalog/style/sub_portals
+      #- ./astun/sub-portal-postprocessing/gmd-sub-portal-inspire-postprocessing.xsl:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139.gemini23/present/csw/gmd-sub-portal-inspire-postprocessing.xsl
       # portal switcher limited to admins only
       - ./astun/geonetwork/catalog/components/usersearches/partials/portalswitcher.html:/var/lib/jetty/webapps/geonetwork/catalog/components/usersearches/partials/portalswitcher.html
       # dashboards
@@ -105,24 +106,24 @@ services:
     networks:
     - esnet
 
-  ogc-api-records-service:
-    image: geonetwork/gn-cloud-ogc-api-records-service:4.2.3-0
-    environment:
-      SPRING_PROFILES_ACTIVE: standalone
-      SPRING_DATASOURCE_URL: jdbc:postgresql://${POSTGRES_DB_HOST}:${POSTGRES_DB_PORT}/${POSTGRES_DB_NAME}
-      SPRING_DATASOURCE_USERNAME: ${POSTGRES_DB_USERNAME}
-      SPRING_DATASOURCE_PASSWORD: ${POSTGRES_DB_PASSWORD}
-      GN_BASEURL: ${GN_PROTOCOL}://${GN_URL}/geonetwork/api
-      GN_LEGACY_URL: ${GN_PROTOCOL}://${GN_URL}/geonetwork
-      GN_INDEX_URL: ${ES_URL}
-      SERVER_FORWARDHEADERSSTRATEGY: FRAMEWORK
-    restart: unless-stopped
-    volumes:
-    - ./ogc-api/copy/copy-iso19139.gemini23.xsl:/workspace/BOOT-INF/classes/xslt/ogcapir/formats/copy/copy-iso19139.gemini23.xsl
-    - ./ogc-api/copy/copy-iso19139.gemini22.xsl:/workspace/BOOT-INF/classes/xslt/ogcapir/formats/copy/copy-iso19139.gemini22.xsl
-    container_name: ogc-api-service
-    networks:
-      - esnet
+  # ogc-api-records-service:
+  #   image: geonetwork/gn-cloud-ogc-api-records-service:4.2.3-0
+  #   environment:
+  #     SPRING_PROFILES_ACTIVE: standalone
+  #     SPRING_DATASOURCE_URL: jdbc:postgresql://${POSTGRES_DB_HOST}:${POSTGRES_DB_PORT}/${POSTGRES_DB_NAME}
+  #     SPRING_DATASOURCE_USERNAME: ${POSTGRES_DB_USERNAME}
+  #     SPRING_DATASOURCE_PASSWORD: ${POSTGRES_DB_PASSWORD}
+  #     GN_BASEURL: ${GN_PROTOCOL}://${GN_URL}/geonetwork/api
+  #     GN_LEGACY_URL: ${GN_PROTOCOL}://${GN_URL}/geonetwork
+  #     GN_INDEX_URL: ${ES_URL}
+  #     SERVER_FORWARDHEADERSSTRATEGY: FRAMEWORK
+  #   restart: unless-stopped
+  #   volumes:
+  #   - ./ogc-api/copy/copy-iso19139.gemini23.xsl:/workspace/BOOT-INF/classes/xslt/ogcapir/formats/copy/copy-iso19139.gemini23.xsl
+  #   - ./ogc-api/copy/copy-iso19139.gemini22.xsl:/workspace/BOOT-INF/classes/xslt/ogcapir/formats/copy/copy-iso19139.gemini22.xsl
+  #   container_name: ogc-api-service
+  #   networks:
+  #     - esnet
 
   nginx:
     image: nginx
