add keycloak docker file and .ear file + add env vars to geonet service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,11 @@ services:
       GEONETWORK_DB_USERNAME: ${POSTGRES_DB_USERNAME}
       GEONETWORK_DB_PASSWORD: ${POSTGRES_DB_PASSWORD}
       GEONETWORK_MICROSERVICESPROXY_TARGETURI: http://ogc-api-records-service:8080
+      #KEYCLOAK_AUTH_SERVER_URL: ${KEYCLOAK_AUTH_SERVER_URL}
+      #KEYCLOAK_REALM: ${KEYCLOAK_REALM}
+      #KEYCLOAK_RESOURCE: ${KEYCLOAK_CLIENT}
+      #KEYCLOAK_SECRET: ${KEYCLOAK_SECRET}
+      #KEYCLOAK_DISABLE_TRUST_MANAGER: ${KEYCLOAK_DISABLE_TRUST_MANAGER}
   
     volumes:
       # general overrides
