add keycloak docker file to .env sample file

--- a/.env-local.sample
+++ b/.env-local.sample
@@ -1,5 +1,5 @@
 COMPOSE_FILE=docker-compose.yml:docker-compose-postgres.yml:docker-compose-elk.yml:docker-compose-monitoring.yml
-#docker-compose-custom.yml:docker-compose-geohealthcheck.yml:docker-compose-zeppelin.yml:docker-compose-datahub.yml
+#docker-compose-custom.yml:docker-compose-geohealthcheck.yml:docker-compose-zeppelin.yml:docker-compose-datahub.yml:docker-compose-keycloak.yml
 
 # Geonetwork
 GN_HOST=geonetwork
