committing all changes before holiday

--- a/geonetwork/WEB-INF/config.properties
+++ b/geonetwork/WEB-INF/config.properties
@@ -13,7 +13,7 @@ usersavedselection.watchlist.searchurl=catalog.search#/search?_uuid={{filter}}
 usersavedselection.watchlist.recordurl=api/records/{{index:_uuid}}
 
 es.protocol=${ES_PROTOCOL}
-es.port=${ES_PORT}
+es.port=
 es.host=${ES_HOST}
 es.url=${ES_URL}
 es.username=${ES_USERNAME}
