--- a/geonetwork/WEB-INF/config.properties
+++ b/geonetwork/WEB-INF/config.properties
@@ -13,11 +13,11 @@ usersavedselection.watchlist.searchurl=catalog.search#/search?_uuid={{filter}}
 usersavedselection.watchlist.recordurl=api/records/{{index:_uuid}}
 
 es.protocol=${ES_PROTOCOL}
-es.port=
+es.port=${ES_PORT}
 es.host=${ES_HOST}
 es.url=${ES_URL}
-es.username=${ES_USERNAME}
-es.password=${ES_PASSWORD}
+#es.username=${ES_USERNAME}
+#es.password=${ES_PASSWORD}
 es.index.features=gn-features
 es.index.features.type=features
 # Define the number of decimals to apply when converting geometries to GeoJSON
