--- a/docker-compose-nrw.yml
+++ b/docker-compose-nrw.yml
@@ -8,4 +8,7 @@ services:
       - ../iso19139.nrw/src/main/plugin/iso19139.nrw:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139.nrw
       #- ../iso19139.nrw/src/main/config/translations/en-schema-iso19139.nrw.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/en-schema-iso19139.nrw.json
       - ../iso19139.nrw/target/gn-schema-iso19139.nrw-4.2.8-SNAPSHOT.jar:/var/lib/jetty/webapps/geonetwork/WEB-INF/lib/gn-schema-iso19139.nrw-4.2.8-SNAPSHOT.jar
+      # sub-portals
+      - ./nrw/sub-portal-postprocessing/gmd-gemini-postprocessing.xsl:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139.nrw/present/csw/gmd-gemini-postprocessing.xsl
+      - ./nrw/sub-portal-postprocessing/gmd-medin-postprocessing.xsl:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139.nrw/present/csw/gmd-medin-postprocessing.xsl
 
