--- a/docker-compose-nrw.yml
+++ b/docker-compose-nrw.yml
@@ -8,4 +8,17 @@ services:
       - ../iso19139.nrw/src/main/plugin/iso19139.nrw:/var/lib/jetty/webapps/geonetwork/WEB-INF/data/config/schema_plugins/iso19139.nrw
       #- ../iso19139.nrw/src/main/config/translations/en-schema-iso19139.nrw.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/en-schema-iso19139.nrw.json
       - ../iso19139.nrw/target/gn-schema-iso19139.nrw-4.2.8-SNAPSHOT.jar:/var/lib/jetty/webapps/geonetwork/WEB-INF/lib/gn-schema-iso19139.nrw-4.2.8-SNAPSHOT.jar
-
+      # post-processing scripts
+      - ./nrw/sub-portal-postprocessing/gmd-gemini-postprocessing.xsl:/var/lib/jetty/webapps/geonetwork/xsl/conversion/export/gmd-gemini-postprocessing.xsl
+      - ./nrw/sub-portal-postprocessing/gmd-medin-postprocessing.xsl:/var/lib/jetty/webapps/geonetwork/xsl/conversion/export/gmd-medin-postprocessing.xsl
+      # Google Analytics code
+      - ./nrw/xslt/base-layout.xsl:/var/lib/jetty/webapps/geonetwork/xslt/base-layout.xsl
+      - ./nrw/xslt/render-html.xsl:/var/lib/jetty/webapps/geonetwork/xslt/common/render-html.xsl
+      # add Welsh to the language selector
+      - ./nrw/geonetwork/catalog/CatController.js:/var/lib/jetty/webapps/geonetwork/catalog/js/CatController.js
+      # Welsh translation files
+      - ./nrw/geonetwork/catalog/locales/cy-admin.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/cy-admin.json
+      - ./nrw/geonetwork/catalog/locales/cy-core.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/cy-core.json
+      - ./nrw/geonetwork/catalog/locales/cy-custom.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/cy-custom.json
+      - ./nrw/geonetwork/catalog/locales/cy-editor.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/cy-editor.json
+      - ./nrw/geonetwork/catalog/locales/cy-search.json:/var/lib/jetty/webapps/geonetwork/catalog/locales/cy-search.json
