WIP removing keycloak config

--- a/.env-local.sample
+++ b/.env-local.sample
@@ -11,7 +11,6 @@ GN_URL=
 GN_SITE_NAME=
 GN_VERSION=4.2.5
 
-
 # Datahub
 DH_HOST=localhost
 DH_PORT=${GN_PORT}
@@ -47,18 +46,13 @@ ES_PREFIX=gn
 ES_PASSWORD=
 
 # Keycloak
-KEYCLOAK_DISABLE_TRUST_MANAGER=true
-KEYCLOAK_DB=keycloak
-KEYCLOAK_DB_HOST=postgres
-KEYCLOAK_DB_USER=keycloak
-KEYCLOAK_DB_SCHEMA=public
-KEYCLOAK_DB_PASSWORD=
-KEYCLOAK_ADMIN_USER=
-KEYCLOAK_ADMIN_PASSWORD=
-KEYCLOAK_AUTH_SERVER_URL=
-KEYCLOAK_REALM=geonetwork
-KEYCLOAK_CLIENT=gn-client
-KEYCLOAK_SECRET=
+OPENIDCONNECT_CLIENTSECRET=
+OPENIDCONNECT_CLIENTID=gn-client
+OPENIDCONNECT_IDTOKENROLELOCATION=resource_access.gn-client.roles
+OPENIDCONNECT_LOGSENSITIVE_INFO=true
+OPENIDCONNECT_ROLECONVERTER=
+OPENIDCONNECT_SERVERMETADATA_FNAME=/WEB-INF/config-security/openid-configuration.json
+GEONETWORK_SECURITY_TYPE: openidconnect
 
 # Geoserver
 INITIAL_MEMORY=2G
@@ -69,7 +63,6 @@ GEOSERVER_PORT=8083
 GEOHEALTHCHECK_DB=geohealthcheck
 SQLALCHEMY_DATABASE_URI=postgresql://${POSTGRES_DB_USERNAME}:${POSTGRES_DB_PASSWORD}@${POSTGRES_DB_HOST}:${POSTGRES_DB_PORT}/${GEOHEALTHCHECK_DB}
 SCRIPT_NAME=/geohealthcheck
-GHC_RUNNER_IN_WEBAPP=False
 GHC_NOTIFICATIONS=True
 GHC_NOTIFICATIONS_VERBOSITY=True
 GHC_ADMIN_EMAIL=${EMAILADDR}
