--- a/docker-compose-keycloak.yml
+++ b/docker-compose-keycloak.yml
@@ -1,38 +1,17 @@
 version: '3'
 
-volumes:
-  kcdata:
-
-services:
-  keycloak:
-    image: quay.io/keycloak/keycloak:latest
-    ports:
-      - 8180:8180
-    security_opt:
-      - no-new-privileges=true
-    container_name: keycloak
-    environment:
-      DB_VENDOR: POSTGRES
-      DB_ADDR: ${KEYCLOAK_DB_HOST}
-      DB_DATABASE: ${KEYCLOAK_DB}
-      DB_USER: ${KEYCLOAK_DB_USER}
-      DB_SCHEMA: ${KEYCLOAK_DB_SCHEMA}
-      DB_PASSWORD: ${KEYCLOAK_DB_PASSWORD}
-      KEYCLOAK_USER: ${KEYCLOAK_ADMIN_USER}
-      KEYCLOAK_PASSWORD: ${KEYCLOAK_ADMIN_PASSWORD}
-      logger.level: INFO
-    command: ["-Djboss.http.port=8180"]
-    volumes:
-      - ./keycloak/singular-user-storage-provider-bundle-1.4.ear:/opt/jboss/keycloak/standalone/deployments/singular-user-storage-provider-bundle-1.4.ear
-    logging:
-          driver: "json-file"
-    networks:
-      - esnet
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8180/auth || exit 1"]
-      interval: 1m
-      timeout: 10s
-      retries: 3
+  geonetwork:
+      # overrides to add keycloak config
+      volumes:
+        - ./keycloak/client-config/openid-configuration.json:/var/lib/jetty/webapps/geonetwork/WEB-INF/config-security/openid-configuration.json
+      environment:
+        GEONETWORK_SECURITY_TYPE: ${GEONETWORK_SECURITY_TYPE}
+        OPENIDCONNECT_CLIENTSECRET: ${OPENIDCONNECT_CLIENTSECRET}
+        OPENIDCONNECT_CLIENTID: ${OPENIDCONNECT_CLIENTID}
+        OPENIDCONNECT_SERVERMETADATA_FNAME: ${OPENIDCONNECT_SERVERMETADATA_FNAME}
+        OPENIDCONNECT_IDTOKENROLELOCATION: ${OPENIDCONNECT_IDTOKENROLELOCATION}
+        OPENIDCONNECT_LOGSENSITIVE_INFO: ${OPENIDCONNECT_LOGSENSITIVE_INFO}
+        OPENIDCONNECT_ROLECONVERTER: ${OPENIDCONNECT_ROLECONVERTER}
 
 networks:
   esnet:
