rectified error in .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -52,7 +52,7 @@ OPENIDCONNECT_IDTOKENROLELOCATION=resource_access.gn-client.roles
 OPENIDCONNECT_LOGSENSITIVE_INFO=true
 OPENIDCONNECT_ROLECONVERTER=
 OPENIDCONNECT_SERVERMETADATA_FNAME=/WEB-INF/config-security/openid-configuration.json
-GEONETWORK_SECURITY_TYPE: openidconnect
+GEONETWORK_SECURITY_TYPE=openidconnect
 
 # Geoserver
 INITIAL_MEMORY=2G
