minor spelling corrections

--- a/.env.sample
+++ b/.env.sample
@@ -30,7 +30,7 @@ KB_URL=http://kibana:5601
 # SMTP
 SMTP=
 SMTP_USERNAME=
-SMTP_PASSWPORD=
+SMTP_PASSWORD=
 EMAIL_ADDR=
 SMTP_PORT=
 SMTP_TLS=
@@ -65,8 +65,8 @@ SQLALCHEMY_DATABASE_URI=postgresql://${POSTGRES_DB_USERNAME}:${POSTGRES_DB_PASSW
 SCRIPT_NAME=/geohealthcheck
 GHC_NOTIFICATIONS=True
 GHC_NOTIFICATIONS_VERBOSITY=True
-GHC_ADMIN_EMAIL=${EMAILADDR}
-GHC_NOTIFICATIONS_EMAIL=${EMAILADDR},them@domain.com
+GHC_ADMIN_EMAIL=${EMAIL_ADDR}
+GHC_NOTIFICATIONS_EMAIL=${EMAIL_ADDR},them@domain.com
 GHC_SMTP_SERVER=${SMTP}
 GHC_SMTP_PORT=${SMTP_PORT}
 GHC_SMTP_TLS=${SMTP_TLS}
