Added environment variable to set maxActive postgres connections

--- a/.env.sample
+++ b/.env.sample
@@ -11,6 +11,7 @@ GN_URL=
 GN_SITE_NAME=
 GN_VERSION=4.2.5
 
+
 # Datahub
 DH_HOST=localhost
 DH_PORT=${GN_PORT}
@@ -23,6 +24,7 @@ POSTGRES_DB_USERNAME=
 POSTGRES_DB_PORT=
 POSTGRES_DB_ROUSER=
 POSTGRES_DB_ROPASSWORD=
+POSTGRES_DB_MAXACTIVE=50
 
 # Kibana
 KB_URL=http://kibana:5601
