--- a/docker-compose-nrw.yml
+++ b/docker-compose-nrw.yml
@@ -28,6 +28,6 @@ services:
       # custom branding
       - ./nrw/geonetwork/catalog/style/srv_custom_style.less:/var/lib/jetty/webapps/geonetwork/catalog/style/srv_custom_style.less
 
-    ogc-api:
-      volumes:
-        - ./nrw/ogc-api/copy/copy-iso19139.nrw.xsl:/workspace/BOOT-INF/classes/xslt/ogcapir/formats/copy/copy-iso19139.nrw.xsl
+  ogc-api-records-service:
+    volumes:
+      - ./nrw/ogc-api/copy/copy-iso19139.nrw.xsl:/workspace/BOOT-INF/classes/xslt/ogcapir/formats/copy/copy-iso19139.nrw.xsl
