--- a/docker-compose-postgres.yml
+++ b/docker-compose-postgres.yml
@@ -2,7 +2,6 @@ version: '3'
 
 volumes:
   pgdata:
-  pglog:
 
 services:
   postgres:
@@ -20,12 +19,14 @@ services:
     command: [ "postgres",
                    "-c", "log_statement=all",
                    "-c", "logging_collector=true",
+                   "-c", "log_rotation_size=250000",
                    "-c", "log_file_mode=0644",
                    "-c", "log_directory=/var/log/postgresql",
-                   "-c", "log_filename=postgresql.log" ]
+                   "-c", "log_filename=postgresql.log",
+                   "-c", "max_connections=200" ]
     volumes:
       - pgdata:/var/lib/postgresql/data
-      - pglog:/var/log/postgresql
+      - /data/postgres/logs:/var/log/postgresql
       #- ./postgresql/audit.sql:/docker-entrypoint-initdb.d/1-audit.sql
     logging:
           driver: "json-file"
