--- a/docker-compose-elk.yml
+++ b/docker-compose-elk.yml
@@ -5,7 +5,8 @@ volumes:
 
 services:
   elasticsearch:
-    image: elasticsearch:7.12.1
+    #image: elasticsearch:7.12.1
+    image: elasticsearch:7.17.15
     # build:
     #   context: ./elasticsearch
     container_name: elasticsearch
@@ -28,6 +29,7 @@ services:
     environment:
       - "ES_JAVA_OPTS=-Xms1G -Xmx1G" 
       - discovery.type=single-node
+      - xpack.security.enabled=true
       # - logger.discovery.name=org.elasticsearch.discovery
       - logger.deprecation.level=OFF
       #- logger.level=WARN
@@ -41,7 +43,8 @@ services:
 
 
   kibana:
-    image: kibana:7.12.1
+    #image: kibana:7.12.1
+    image: kibana:7.17.15
     #image: amazon/opendistro-for-elasticsearch-kibana:1.9.0
     container_name: kibana
     restart: unless-stopped
