--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,9 +33,8 @@ services:
       ES_HOST: ${ES_HOST}
       ES_PROTOCOL: ${ES_PROTOCOL}
       ES_PORT: ${ES_PORT}
-      #ES_URL: ${ES_URL}
-      #ES_USERNAME: ${ES_USERNAME}
-      #ES_PASSWORD: ${ES_PASSWORD}
+      ES_USERNAME: ${ES_USERNAME}
+      ES_PASSWORD: ${ES_PASSWORD}
       KB_URL: ${KB_URL}
       GEONETWORK_DB_TYPE: postgres
       GEONETWORK_DB_HOST: ${POSTGRES_DB_HOST}
@@ -45,11 +44,6 @@ services:
       GEONETWORK_DB_USERNAME: ${POSTGRES_DB_USERNAME}
       GEONETWORK_DB_PASSWORD: ${POSTGRES_DB_PASSWORD}
       GEONETWORK_MICROSERVICESPROXY_TARGETURI: http://ogc-api-records-service:8080
-      #KEYCLOAK_AUTH_SERVER_URL: ${KEYCLOAK_AUTH_SERVER_URL}
-      #KEYCLOAK_REALM: ${KEYCLOAK_REALM}
-      #KEYCLOAK_RESOURCE: ${KEYCLOAK_CLIENT}
-      #KEYCLOAK_SECRET: ${KEYCLOAK_SECRET}
-      #KEYCLOAK_DISABLE_TRUST_MANAGER: ${KEYCLOAK_DISABLE_TRUST_MANAGER}
 
     volumes:
       # general overrides
