--- a/.env.sample
+++ b/.env.sample
@@ -28,6 +28,8 @@ POSTGRES_DB_MAXACTIVE=50
 
 # Kibana
 KB_URL=http://kibana:5601
+# Password for kibana user kibana_system
+KB_SYSTEM_PASSWORD=
 
 # SMTP
 SMTP=
@@ -44,8 +46,9 @@ ES_HOST=elasticsearch
 ES_PROTOCOL=http
 ES_PORT=9200
 ES_USERNAME=
-ES_PREFIX=gn
 ES_PASSWORD=
+# Password for es user elastic
+ES_ELASTIC_PASSWORD=
 
 # Keycloak
 OPENIDCONNECT_CLIENTSECRET=
