--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       GEONETWORK_DB_HOST: ${POSTGRES_DB_HOST}
       GEONETWORK_DB_PORT: ${POSTGRES_DB_PORT}
       GEONETWORK_DB_NAME: ${POSTGRES_DB_NAME}
-      GEONETWORK_DB_POOL_MAXACTIVE: ${POSTGRES_DB_MAXACTIVE}
+      #GEONETWORK_DB_POOL_MAXACTIVE: ${POSTGRES_DB_MAXACTIVE}
       GEONETWORK_DB_USERNAME: ${POSTGRES_DB_USERNAME}
       GEONETWORK_DB_PASSWORD: ${POSTGRES_DB_PASSWORD}
       GEONETWORK_MICROSERVICESPROXY_TARGETURI: http://ogc-api-records-service:8080
