--- a/kibana/kibana.yml
+++ b/kibana/kibana.yml
@@ -1,5 +1,5 @@
 server.basePath: "/geonetwork/dashboards"
-server.rewriteBasePath: true
+server.rewriteBasePath: false
 kibana.index: ".dashboards"
 server.name: kibana
 server.host: "0.0.0.0"
