--- a/kibana/kibana.yml
+++ b/kibana/kibana.yml
@@ -1,11 +1,12 @@
 server.basePath: "/geonetwork/dashboards"
-server.rewriteBasePath: false
+server.publicBaseUrl: ${SERVER_PUBLICBASEURL}
+server.rewriteBasePath: true
 kibana.index: ".dashboards"
 server.name: kibana
 server.host: "0.0.0.0"
 elasticsearch.hosts: [ "http://elasticsearch:9200" ]
 logging.quiet: true
-csp.rules: ["frame-src 'self' http://localhost/"]
+csp.rules: ["frame-src 'self' ${SERVER_PUBLICBASEURL}"]
 csp.warnLegacyBrowsers: false
 elasticsearch.username: "elastic"
 server.securityResponseHeaders.strictTransportSecurity: "max-age=31536000"
