--- a/ogc-api/bootstrap.yml
+++ b/ogc-api/bootstrap.yml
@@ -74,8 +74,8 @@ gn:
   index:
     url: http://localhost:9200
     records: gn-records
-    username:
-    password:
+    username: ${ES_USERNAME}
+    password: ${ES_PASSWORD}
 #logging.level:
 #  org.springframework: DEBUG
 #  org.hibernate.SQL: DEBUG
